--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.5",
+    "draft-js": "^0.11.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
@@ -27,6 +31,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.18",
+    "@types/lodash": "^4.17.5"
   }
 }
